# agile-pasta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STRING_LITERAL_SYNTAX.md
.github/: copilot-instructions.md
examples/: LARGE_DATASET_README.md
examples/input/: FileA.psv  FileA_Headers.psv  FileB.psv  FileB_Headers.psv  departments.psv  departments_Headers.psv  employees.psv  employees_Headers.psv  large_employees_Headers.psv
examples/output/: department_budget_Headers.psv  department_budget_Rules.psv  employee_dept_report_Headers.psv  employee_dept_report_Rules.psv  employee_summary.csv  employee_summary_Headers.psv  employee_summary_Rules.psv  header_mismatch_test_Headers.psv  header_mismatch_test_Rules.psv  henry_test_Headers.psv  henry_test_Rules.psv  ifelse_test_Headers.psv  ifelse_test_Rules.psv  join_test_Headers.psv  join_test_Rules.psv  static_output_Headers.psv  static_output_Rules.psv  union_test_Headers.psv  union_test_Rules.psv
include/: ansi_output.h  command_line_parser.h  csv_writer.h  custom_progress_bar.h  database.h  file_scanner.h  progress_manager.h  psv_parser.h  query_engine.h  transformation_engine.h  ui_coordinator.h
scripts/: generate_large_dataset.py
src/: ansi_output.cpp  command_line_parser.cpp  csv_writer.cpp  custom_progress_bar.cpp  database.cpp  file_scanner.cpp  main.cpp  progress_manager.cpp  psv_parser.cpp  query_engine.cpp  transformation_engine.cpp  ui_coordinator.cpp
tests/: README.md  test_command_line_parser.cpp  test_csv_writer.cpp  test_database.cpp  test_file_scanner.cpp  test_integration.cpp  test_main.cpp  test_psv_parser.cpp  test_query_engine.cpp  test_transformation_engine.cpp
